--- a/D01shopcar.html
+++ b/D01shopcar.html
@@ -118,7 +118,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav m-auto">
                             <li class="nav-item active">
-                                <a class="nav-link text-white" href="B02index-unlock.html">首頁 <span class="sr-only">(current)</span></a>
+                                <a class="nav-link text-white" href="index.html">首頁 <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle text-pink" href="index.html" id="navbarDropdown" role="button"
@@ -348,7 +348,7 @@
                 <div class="d-flex flex-row">
                     <div class="pt-3">
                         <ul class="pl-0">
-                            <li><a href="B02index-unlock.html" class="text-decoration-none text-white">首頁</a></li>
+                            <li><a href="index.html" class="text-decoration-none text-white">首頁</a></li>
                             <li class="pt-4"><a href="index.html" class="text-decoration-none text-white">新品上架</a></li>
                             <li class="pt-4"><a href="C01shoplist.html" class="text-decoration-none text-white">銷售排行</a></li>
                             <li class="pt-4"><a href="C01shoplist.html" class="text-decoration-none text-white">現貨專區</a></li>
