--- a/G05.html
+++ b/G05.html
@@ -113,7 +113,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav m-auto">
                             <li class="nav-item active">
-                                <a class="nav-link text-white" href="B02index-unlock.html">首頁 <span
+                                <a class="nav-link text-white" href="index.html">首頁 <span
                                         class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item dropdown">
@@ -152,7 +152,7 @@
             <div class="row justify-content-between mt-5 mb-4">
                 <div class="headline">會員中心</div>
                 <ol class="breadcrumb mb-0 p-0" style="background-color:transparent;">
-                    <li class="breadcrumb-item"><a href="B02index-unlock.html" class="text-secondary"><img src="image/C_01.PNG"
+                    <li class="breadcrumb-item"><a href="index.html" class="text-secondary"><img src="image/C_01.PNG"
                                 class="img-fluid w-25 mb-1" alt=""> 首頁</a></li>
                     <li class="breadcrumb-item"><a  class="text-secondary">會員中心</a></li>
                 </ol>
@@ -324,7 +324,7 @@
                 <div class="d-flex flex-row">
                     <div class="pt-3">
                         <ul class="pl-0">
-                            <li><a href="B02index-unlock.html" class="text-decoration-none text-white">首頁</a></li>
+                            <li><a href="index.html" class="text-decoration-none text-white">首頁</a></li>
                             <li class="pt-4"><a href="index.html" class="text-decoration-none text-white">新品上架</a></li>
                             <li class="pt-4"><a href="C01shoplist.html" class="text-decoration-none text-white">銷售排行</a></li>
                             <li class="pt-4"><a href="C01shoplist.html" class="text-decoration-none text-white">現貨專區</a></li>
